//------------------------------------------------------------------------------
// {C} Copyright 2019 Pensando Systems Inc. All rights reserved
// common protobuf specifications of Metaswitch MIBs
//------------------------------------------------------------------------------

syntax = "proto3";
package pds;

// Admin Status
enum AdminSt {
  ADMIN_NONE = 0;
  ADMIN_UP   = 1;
  ADMIN_DOWN = 2;
}

// AMB Bool
enum AMBBool {
  BOOL_NONE  = 0;
  BOOL_TRUE  = 1;
  BOOL_FALSE = 2;
}

